# casanova-macro

./: pyproject.toml  update_gitignore.bat
src/casanovamacro/: __init__.py
src/casanovamacro/Core/: API.py  ErrorHandler.py  Global.py  Socket.py  Thread.py  Types.py  __init__.py
src/casanovamacro/Gameplay/: Corruption.py  Template.py  __init__.py
src/casanovamacro/Gameplay/Dailies/: Blueprint.py  _ClaimBounty.py  _ClaimDailyBonus.py  _ClaimFund.py  _GrindGold.py  _Ladder.py  __init__.py
src/casanovamacro/Gameplay/Dungeons/: DungeonBlueprint.py  _110.py  _125.py  _165.py  _175.py  _195.py  _215.py  _255.py  _275.py  _295.py  _30.py  _315.py  _335.py  _355.py  _55.py  _75.py  _85.py  _Pixie.py  __init__.py
src/casanovamacro/Gameplay/Events/: EventBlueprint.py  _PurchaseTorch.py  __init__.py
src/casanovamacro/Gameplay/Grinding/: GrindingBlueprint.py  _310.py  _320.py  _340.py  _355.py  __init__.py
src/casanovamacro/Helper/: Automate.py  ErrorHandler.py  Global.py  Socket.py  Thread.py  Types.py
src/casanovamacro/Helper/Macro/: Action.py  Base.py  Const.py  Game.py  Recognition.py  __init__.py
src/casanovamacro/Macro/: Action.py  Automate.py  Base.py  Const.py  Game.py  Recognition.py  __init__.py
