[project]
name = "casanovamacro"
version = "0.1.0"
description = ""
authors = [
    {name ="ark"}
]
dependecies = [
    "argparse==1.4.0",
    "python-socketio==5.11.2",
    "pyautogui==0.9.54", 
    "pywin32==306",
    "opencv-python==4.10.0.82"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
